[tool.pdm]
[tool.pdm.scripts]
# start = {call = "provind_client.main"}
start = {cmd = "python provind_client/main.py"}
build = "nuitka --standalone --follow-imports --assume-yes-for-downloads --warn-unusual-code --warn-implicit-exceptions --disable-bytecode-cache --output-dir=build ./provind_client/main.py​"
check = {cmd = "tox"}
fix = {cmd = "tox -e fix"}
# --windows-icon-from-ico=

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.10.1",
    "black>=22.10.0",
    "autoflake>=2.0.0",
    "yamllint>=1.28.0",
    "tox-ini-fmt>=0.5.2",
    "pyproject-fmt>=0.4.1",
    "nuitka>=1.2.4",
    "pylint>=2.15.8",
    "pytest>=7.2.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "tox>=3.27.1",
    "tox-pdm>=0.6.0",
    "shiv>=1.0.3",
    "ordered-set>=4.1.0",
    "tox-pyenv>=1.1.0",
]

[project]
name = "Pro_Ind_Cliente"
version = "1.0"
description = ""
license = {text = "MPL-2.0"}
authors = [
    {name = "Alejandro Alvarez", email = "eliluminado00@gmail.com"},
]
requires-python = ">=3.9,<=3.11"
dependencies = [
    "pillow>=9.3",
    "sentry-sdk>=1.11.1",
    "tomli>=2.0.1",
    "websockets>=10.4",
    "pytwain @ git+https://github.com/denisenkom/pytwain.git",
]

[build-system]
build-backend = "pdm.pep517.api"
requires = [
  "pdm-pep517>=1",
]

[tool.pyprojectx]
pdm = "pdm==2.3.2"

# commonly used tools
#black = "black"
#isort = "isort"
#pylint = "pylint"
#pre-commit = "pre-commit"
#jupyter = ["jupyter", "."]

[tool.pyprojectx.aliases]
install = "pdm install"
run = "pdm run"
start = "pdm run start"
outdated = "pdm update --outdated"
test = "pdm run pytest"

[tool.pyprojectx.os.win.aliases]
# example os specific aliases
#clean = "rmdir /s/q .venv .pytest_cache dist"
#clean-all = "pw@ clean & rmdir /s/q .pyprojectx"

[tool.pylint.MASTER]

load-plugins = [
"pylint.extensions.code_style",
"pylint.extensions.mccabe",
"pylint.extensions.docstyle",
"pylint.extensions.empty_comment",
"pylint.extensions.docparams",
"pylint.extensions.typing",
]

extension-pkg-whitelist = [
]

[tool.pylint."MESSAGES CONTROL"]
enable = 'c-extension-no-member'

[tool.isort]
profile = "black"
src_paths = ["provind_client",]

[tool.autoflake]
check = true
recursive = true
remove-unused-variables = true
remove-all-unused-imports = true
expand-star-imports = true

[nuitka]
